--- a/assets/css/decoration.css
+++ b/assets/css/decoration.css
@@ -1,77 +1,31 @@
-* {
-    font-family: Formula 1, 'Roboto';
-    box-sizing: border-box;
-}
+* { font-family: Formula 1, 'Roboto'; box-sizing: border-box; }
 
-section {
-    background-color: rgb(208, 30, 30);
-}
+section { background-color: #d01e1e; }
 
-.container {
-    background-color: rgba(0, 0, 0, 0.44);
-}
+.container { background-color: rgba(0, 0, 0, 0.44); }
 
-.title {
-    color: white;
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: black;
-    border-radius: 5px;
-}
+.title { color: white; display: inline-block; padding: 10px 20px; background-color: black; border-radius: 5px; }
 
-.row {
-    padding: 10px;
-    justify-content: center;
-}
+.row { padding: 10px; justify-content: center; }
 
-.card {
-    text-align: center;
-    border-radius: 50px;
-    margin: 10px 0px;
-    border: 10px solid white;
-}
+.card { text-align: center; border-radius: 50px; margin: 10px 0px; border: 10px solid white; }
 
-.image {
-    background: rgb(0, 212, 255);
-    background: linear-gradient(180deg, rgba(255, 0, 0, 0.946) 0%, rgb(36, 39, 39) 60%);
-    /* -webkit-border-top-left-radius: 50px;
-    -webkit-border-top-right-radius: 50px;
-    -moz-border-radius-topleft: 50px;
-    -moz-border-radius-topright: 50px; */
-    border-top-left-radius: 60px;
-    border-top-right-radius: 60px;
-    width:100%;
-}
-.pName{
-    font-size:20px;
-}
-.pFName, .pCode, .pNumber{
-    text-transform:uppercase;
-    font-size:35px;
-    font-weight:bold;
-}
-.pNumber{
-    color:rgb(211, 23, 23);
-}
+.image { background: #00d4ff; background: linear-gradient(180deg, rgba(255, 0, 0, 0.946) 0%, #242727 60%); -webkit-border-top-left-radius: 50px; -webkit-border-top-right-radius: 50px; -moz-border-radius-topleft: 50px; -moz-border-radius-topright: 50px; border-top-left-radius: 60px; border-top-right-radius: 60px; width: 100%; }
 
-.bottom{
-    background-color:#111;
-    border-bottom-left-radius: 60px;
-    border-bottom-right-radius: 60px;
-    color:var(--bs-white);
-}
+.pName { font-size: 20px; }
 
-a {
-    text-decoration: none;
-    color: red;
-}
-a:hover{
-    color:white;
-}
-span {
-    background-color:black;
-}
+.pFName, .pCode, .pNumber { text-transform: uppercase; font-size: 35px; font-weight: bold; }
 
-.f1logo{
-    width:150px;
-}
+.pNumber { color: #d31717; }
+
+.bottom { background-color: #111; border-bottom-left-radius: 60px; border-bottom-right-radius: 60px; color: var(--bs-white); }
+
+a { text-decoration: none; color: red; }
+
+a:hover { color: white; }
+
+span { background-color: black; }
+
+.f1logo { width: 150px; }
+
+/*# sourceMappingURL=decoration.css.map */
